fixing-all the little things and finilzing the portfolio

--- a/portfolio/bookmarklet-serp-extractor/index.html
+++ b/portfolio/bookmarklet-serp-extractor/index.html
@@ -197,33 +197,7 @@
          </div>
       </section>
       <!-- End Breadcrumbs -->
-      <div class="col-lg">
-         <div class="container mt-5">
-            <div class="card shadow">
-               <div class="card-header">
-                  <strong>Portfolio Item Details</strong>
-               </div>
-               <div class="card-body">
-                  <ul class="list-unstyled">
-                     <li class="mb-2 mt-0">
-                        <strong>Category</strong>:
-                        <ul>
-                           <li id="portfolio_category">{{portfolio_category}}</li>
-                        </ul>
-                     </li>
-                     <li>
-                        <strong>Key Skills Highlighted</strong>:
-                        <ul>
-                           <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                           <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                           <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
-                        </ul>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </div>
+    
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
          <div class="container">
@@ -242,6 +216,34 @@
                         </div>
                      </div>
                      <div class="swiper-pagination"></div>
+                  </div>
+
+                  <div class="col-lg">
+                     <div class="container mt-5">
+                        <div class="card shadow">
+                           <div class="card-header">
+                              <strong>Portfolio Item Details</strong>
+                           </div>
+                           <div class="card-body">
+                              <ul class="list-unstyled">
+                                 <li class="mb-2 mt-0">
+                                    <strong>Category</strong>:
+                                    <ul>
+                                       <li id="portfolio_category">Innovation</li>
+                                    </ul>
+                                 </li>
+                                 <li>
+                                    <strong>Key Skills Highlighted</strong>:
+                                    <ul>
+                                       <li id="skill_1_portfolio">Bookmarklets</li>
+                                       <li id="skill_2_portfolio">JavaScript, Development</li>
+                                       <li id="skill_3_portfolio">Innovative Process Streamlining</li>
+                                    </ul>
+                                 </li>
+                              </ul>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                   <div class="portfolio-description">
                      <h2 class="display-2" id="h2_showcase_header">The Bookmarklet Breakthrough in SEO Efficiency</h2>
@@ -327,13 +329,13 @@
                            <h3 class="display-4 text-white mb-5">We are a design agency studio delivering custom
                               creative & unique websites.</h3>
                            <div class="btn-group">
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png
+                              <a href="tel:19132294694" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png
 " style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
 <br>
                               <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png
 
 " style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png
+                              <a href="https://bit.ly/DDLinkedin" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png
 " style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
                            </div>
                         </div>
