--- a/portfolio/developer-skills/index.html
+++ b/portfolio/developer-skills/index.html
@@ -4,9 +4,8 @@
 <head>
    <meta charset="utf-8">
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-   <title>Daine Dvorak's Portfolio - Development Skills</title>
-   <meta content="" name="description">
-   <meta content="" name="keywords">
+   <title>Development Skills - Daine Dvorak's Portfolio</title>
+   <meta content="Explore my journey as a developer: Innovating a bookmarklet tool that revolutionized SEO audits, boosting efficiency by 50% and enhancing strategic insights." name="description">
    <!-- Favicons -->
    <link rel="apple-touch-icon" sizes="180x180"
       href="https://dainedvorak.com/z_dev/public/assets/img/favicon/apple-touch-icon.png">
@@ -197,35 +196,7 @@
          </div>
       </section>
       <!-- End Breadcrumbs -->
-      <div class="col-lg">
-         <div class="container mt-5">
-            <div class="card shadow">
-               <div class="card-header">
-                  <strong>Portfolio Item Details</strong>
-               </div>
-               <div class="card-body">
-                  <ul class="list-unstyled">
-                     <li class="mb-2 mt-0">
-                        <strong>Category</strong>:
-                        <ul>
-                           <li id="portfolio_category">Code Development
-                           </li>
-                        </ul>
-                     </li>
-                     <li>
-                        <strong>Key Skills Highlighted</strong>:
-                        <ul>
-                           <li id="skill_1_portfolio">HTML, CSS, PHP, JavaScript, NodeJS, AJAX, MySQL, Reddis, Ubuntu Bash, Windows Batch, VBA, Python, Docker
-                           </li>
-                           <li id="skill_2_portfolio">Innovative Problem-Solving Expertise</li>
-                           <li id="skill_3_portfolio">AI and Machine Learning</li>
-                        </ul>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </div>
+ 
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
          <div class="container">
@@ -244,6 +215,36 @@
                         </div>
                      </div>
                      <div class="swiper-pagination"></div>
+                  </div>
+
+                  <div class="col-lg">
+                     <div class="container mt-5">
+                        <div class="card shadow">
+                           <div class="card-header">
+                              <strong>Portfolio Item Details</strong>
+                           </div>
+                           <div class="card-body">
+                              <ul class="list-unstyled">
+                                 <li class="mb-2 mt-0">
+                                    <strong>Category</strong>:
+                                    <ul>
+                                       <li id="portfolio_category">Code Development
+                                       </li>
+                                    </ul>
+                                 </li>
+                                 <li>
+                                    <strong>Key Skills Highlighted</strong>:
+                                    <ul>
+                                       <li id="skill_1_portfolio">HTML, CSS, PHP, JavaScript, NodeJS, AJAX, MySQL, Reddis, Ubuntu Bash, Windows Batch, VBA, Python, Docker
+                                       </li>
+                                       <li id="skill_2_portfolio">Innovative Problem-Solving Expertise</li>
+                                       <li id="skill_3_portfolio">AI and Machine Learning</li>
+                                    </ul>
+                                 </li>
+                              </ul>
+                           </div>
+                        </div>
+                     </div>
                   </div>
                   <div class="portfolio-description">
                      <h2 class="display-2" id="h2_showcase_header">Coding Excellence: My Journey as a Developer and Innovator</h2>
@@ -320,7 +321,7 @@
          <section class="bsb-cta-2">
             <div class="container-fluid">
                <div class="card border-0 rounded-3 overflow-hidden text-center bsb-overlay"
-                  style="background-image: url('https://img.freepik.com/free-photo/vivid-abstract-background-cubes_58702-6098.jpg?w=1380&t=st=1707776305~exp=1707776905~hmac=dc14b93f5e91a5fcf550f7e5de181e106c8bd11eabab6bd1b42cf4c6536589b0'); --bsb-overlay-opacity: .7; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
+                  style="background-image: url('https://img.freepik.com/free-vector/announcement-background-design_23-2151168488.jpg?w=1380&t=st=1707842884~exp=1707843484~hmac=5737e8e4cbceea8378ec17ae509a14eabfa7db2b75fa9c8138bbcdc8822a062b'); --bsb-overlay-opacity: .7; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
                   <div class="card-body">
                      <div class="row align-items-center justify-content-center">
                         <div class="col-12 col-md-10 col-xl-8 col-xxl-7">
@@ -328,13 +329,13 @@
                            <h3 class="display-4 text-white mb-5">We are a design agency studio delivering custom
                               creative & unique websites.</h3>
                            <div class="btn-group">
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png
+                              <a href="tel:19132294694" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png
 " style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
 <br>
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png
+                              <a href="https://dainedvorak.com/contact-me/index.html" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png
 
 " style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
-                              <a href="#!" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png
+                              <a href="https://bit.ly/DDLinkedin" class="btn btn-light bsb-btn-3xl rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png
 " style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
                            </div>
                         </div>
