--- a/portfolio/development-coding-skills/index.html
+++ b/portfolio/development-coding-skills/index.html
@@ -206,8 +206,8 @@
                                        <strong>Key Skills Highlighted</strong>:
                                        <ul>
                                           <li id="skill_1_portfolio">HTML, CSS, PHP, JavaScript, SQL, AJAX Developer</li>
-                                          <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                                          <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                                          <li id="skill_2_portfolio">Innovative, Creative, Dedicated</li>
+                                          <li id="skill_3_portfolio">Problem Solver, Good Communicator</li>
                                        </ul>
                                     </li>
                                  </ul>
@@ -216,26 +216,25 @@
                         </div>
                      </div>
                      <div class="portfolio-description">
-                        <h2 class="display-2" id="h2_showcase_header">Coding Excellence: My Journey as a Developer and Innovator</h2>
+                        <h2 class="display-2" id="h2_showcase_header">Bridging Code and Impact: A Developer's Tale of Innovation and Results</h2>
                         <h3 style="font-weight: 900;">Introduction:</h3>
-                        <p>get rest of the text from here: https://www.notion.so/jettlifetech/Website-Showcase-Content-30ad8e17a840436bbff6b6ae745fec51?pvs=4#77ace2c985c04465bf6359a4eb228f02</p>
-                        <h3 style="font-weight: 900;">Challenge:</h3>
-                        <p>{{Challenge_Content}} </p>
-                        <h3 style="font-weight: 900;">Strategy:</h3>
-                        <p>{{Strategy_Content}}</p>
-                        <h3 style="font-weight: 900;">Results:</h3>
-                        <ul>
-                           <li id="results_1">{{Results_Content_1}}</li>
-                           <li id="results_2">{{Results_Content_2}}</li>
-                           <li id="results_3">{{Results_Content_3}}</li>
-                           <li id="results_4">{{Results_Content_4}}</li>
-                           <li id="results_5">{{Results_Content_5}}</li>
-                           <li id="results_6">{{Results_Content_6}}</li>
+                        <p>In the ever-evolving tech landscape, the blend of coding prowess and the drive to deliver tangible outcomes defines my professional journey. Here's a look at how my development skills have translated into measurable success.</p>
+                        <h3 style="font-weight: 900;">Coding Mastery and Technical Leadership:</h3>
+                        <p>
+                           <ul>
+                           <li><strong>Server Optimization Expert:</strong> Specializing in AWS EC2 and LAMP Stack optimizations, I've engineered solutions that have boosted server performance by up to 40%, ensuring high reliability and efficiency in handling web traffic.</li>
+                        <li><strong>AI-Driven Development:</strong> My innovative use of AI, including custom GPT models for SEO, has slashed the turnaround time for complex deliverables by over 50%, showcasing my ability to leverage AI for practical and impactful solutions.</li>
+                        <li><strong>Technical Audits for Excellence:</strong> Conducted over 100 comprehensive technical audits, identifying critical optimizations that have led to an average improvement of 30% in website load times and performance metrics.</li>
                         </ul>
-                        <h3 style="font-weight: 900;">Impact:</h3>
-                        <p>{{Impact_Content}}</p>
-                        <h4 style="font-weight: 900;">Summary:</h4>
-                        <p id="port_summary"> {{Summary_Content}} </p>
+                        </p>
+                        <h3 style="font-weight: 900;">Quantifiable Developer Achievements:</h3>
+                        <ul>
+                           <li><strong>Schema Strategy and SEO Impact:</strong> Implemented advanced schema strategies through AI integration, boosting SERP-rich results from 14% to 39% across 1,000+ pages, which directly contributed to a 43% rise in organic impressions.</li>
+                           <li><strong>Process Efficiency through AI:</strong> Integrated AI tools into development processes, achieving a 45% reduction in project delivery times and enhancing productivity while maintaining high standards of quality.</li>
+                           <li><strong>Collaborative Success:</strong> Led cross-functional teams in optimizing web infrastructures, resulting in a 43% increase in organic traffic for websites previously ranking poorly in Core Web Vitals.</li>
+                           </ul>
+                        <h3 style="font-weight: 900;">Future-Focused and Community-Driven:</h3>
+                        <p>As a developer dedicated to pushing the boundaries of technology and achieving results that speak volumes, I'm constantly exploring new ways to innovate and improve. I welcome the opportunity to connect with like-minded professionals who are passionate about making a difference through technology.</p>
                      </div>
                   </div>
                </div>
