--- a/portfolio/seo-workbook-site-builds-or-migrations/index.html
+++ b/portfolio/seo-workbook-site-builds-or-migrations/index.html
@@ -80,63 +80,26 @@
          // DOMContentLoaded  end
          
       </script>
-      <style>
-         /* ===== Buttons Css ===== */
-.call-action-one .call-action-content .call-action-btn .primary-btn {
-  background: var(--primary);
-  color: var(--white);
-  box-shadow: var(--shadow-2);
-}
-.call-action-one .call-action-content .call-action-btn .active.primary-btn, .call-action-one .call-action-content .call-action-btn .primary-btn:hover, .call-action-one .call-action-content .call-action-btn .primary-btn:focus {
-  background: var(--primary-dark);
-  color: var(--white);
-  box-shadow: var(--shadow-4);
-}
-.call-action-one .call-action-content .call-action-btn .deactive.primary-btn {
-  background: var(--gray-4);
-  color: var(--dark-3);
-  pointer-events: none;
-}
+	        <style>
+         #main2 {
+            background-color: #eeeeee;
 
-/*===== call action one =====*/
-.call-action-one {
-  background-color: var(--light-2);
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
-.call-action-one .call-action-content .call-action-text {
-  margin-top: 50px;
-}
-.call-action-one .call-action-content .call-action-text .action-title {
-  font-weight: 600;
-  color: var(--black);
-}
-.call-action-one .call-action-content .call-action-text .text-lg {
-  color: var(--dark-3);
-  margin-top: 16px;
-}
-.call-action-one .call-action-content .call-action-btn {
-  margin-top: 50px;
-}
-    #skillITEM {
-    border: 1.5px solid green;
-    margin-bottom: 1%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-  .skillITEM {
-    border: 1.5px solid green;
-    margin-bottom: 1%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-    #checkmark {
-      fill: #17aa1c;
-      width: 2%;
-      height: auto;
-      padding-bottom: 2px;
-      margin-right: 10px;
-                        }
+           /*  background-image: url("https://dainedvorak.com/z_dev/public/assets/img/background-patterns/white-css-pattern-zig-zag-2.png"); */
+            background-repeat: repeat;
+         }
+         #skillITEM {
+         border: 1.5px solid green;
+         margin-bottom: 1%;
+         padding-top: 5px;
+         padding-bottom: 5px;
+         }
+         #checkmark {
+         fill: #17aa1c;
+         width: 2%;
+         height: auto;
+         padding-bottom: 2px;
+         margin-right: 10px;
+         }
          .hoverable {
          transition: background-color 0.2s ease;
          align-items: center;
@@ -150,8 +113,9 @@
          border-radius: 5%;
          }
       </style>
-   <body>
-      <!-- ======= Mobile nav toggle button ======= -->
+	  
+<body>
+  <!-- ======= Mobile nav toggle button ======= -->
       <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
       <!-- ======= Header ======= -->
       <header id="header">
@@ -166,9 +130,8 @@
                   </a>
                   <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
                   </a>
-                  <a href="https://bit.ly/DD_JETTLIFE"  class="youtube"><i class="bx bxl-youtube"></i>
+                  <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
                   </a>
-
                </div>
             </div>
             <nav id="navbar" class="nav-menu navbar">
@@ -194,96 +157,106 @@
          </div>
       </header>
       <!-- End Header -->
-      <main id="main">
+      <main id="main2">
          <!-- ======= Breadcrumbs ======= -->
          <section id="breadcrumbs" class="breadcrumbs border-bottom shadow bg-dark text-white">
-            <div class="container-fluid">
+            <div class="container">
                <div class="d-flex justify-content-between align-items-center">
-                  <h1>Management/Leadership</h1>
+                  <h1>Dynamic SEO Workbook for New Site Builds</h1>
                </div>
             </div>
          </section>
          <!-- End Breadcrumbs -->
-<div class="container mt-4">
-    <h1>Leading Digital Transformation: A Case Study on Driving SEO Success and Team Growth</h1>
-
-<p>In the rapidly evolving landscape of digital marketing, strategic leadership and innovative management are pivotal. My journey, underpinned by a passion for process automation, SEO, and team development, showcases a blend of technical expertise and leadership acumen that has propelled organizations to new heights of success.</p>
-
-<h2>Background</h2>
-
-<p>With over a decade of experience in the digital marketing sphere, my focus has been on leveraging cutting-edge technology and SEO strategies to enhance organic performance and drive revenue growth. At the core of my approach is a commitment to leadership by example, fostering a culture of continuous learning and development.</p>
-
-<h2>Challenge</h2>
-
-<p>The digital marketing industry is characterized by its fast-paced and ever-changing nature. Staying ahead requires not only keeping pace with technological advancements and SEO trends but also ensuring that the team remains motivated, skilled, and aligned with evolving business goals.</p>
-
-<h3>Action</h3>
-
+ 
+         <!-- ======= Portfolio Details Section ======= -->
+         <section id="portfolio-details" class="portfolio-details">
+            <div class="container">
+               <div class="row gy-4">
+                  <div class="col-lg">
+                     <div class="portfolio-details-slider swiper">
+                        <div class="swiper-wrapper align-items-center">
+                           <div class="swiper-slide">
+                              <img src="{{showcase_image_1}}" alt="{{showcase_image_1_altText}}" id="showcase_image_1">
+                           </div>
+                           <div class="swiper-slide">
+                              <img src="{{showcase_image_2}}" alt="{{showcase_image_2_altText}}" id="showcase_image_2">
+                           </div>
+                           <div class="swiper-slide">
+                              <img src="{{showcase_image_3}}" alt="{{showcase_image_3_altText}}" id="showcase_image_3">
+                           </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                     </div>
+                     <div class="col-lg">
+                        <div class="container mt-5">
+                           <div class="card shadow">
+                              <div class="card-header">
+                                 <strong>Portfolio Item Details</strong>
+                              </div>
+                              <div class="card-body">
+                                 <ul class="list-unstyled">
+                                    <li class="mb-2 mt-0">
+                                       <strong>Category</strong>:
+                                       <ul>
+                                          <li id="portfolio_category">Process Automation, Template Development</li>
+                                       </ul>
+                                    </li>
+                                    <li>
+                                       <strong>Key Skills Highlighted</strong>:
+                                       <ul>
+                                          <li id="skill_1_portfolio">Formula Development</li>
+                                          <li id="skill_2_portfolio">API Data Integration</li>
+                                          <li id="skill_3_portfolio">Process Automation</li>
+                                       </ul>
+                                    </li>
+                                 </ul>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     <p class="mt-5"><strong>TLDR:</strong></p>
 <ul>
-<li><strong>SEO Opportunities Turned To Revenue:</strong> Spearheaded the acquisition and execution of multiple SEO projects, generating over $200,000 in revenue. My strategy involved identifying growth opportunities, engaging with stakeholders, and aligning team efforts with business objectives.</li>
+<li>Daine Dvorak's dynamic SEO Workbook revolutionizes SEO project management.</li>
+<li>Applicable for nearly all SEO Work on any clients website migrations, new builds, maintenance, and decommissioning.</li>
+<li>Significantly reduces human error and improves efficiency through custom formulas and accuracy.</li>
+<li>Introduces a 100% scalable template, halving SEO management time.</li>
+<li>Sets new industry standards for smooth and error-free SEO operations</li>
+</ul>
+<h3 style="font-weight: 900;" class="mt-5">Revolutionizing SEO Management with the Dynamic SEO Workbook</h3>
+<p>At the core of my technical skills is the development of an SEO Workbook—a dynamic, innovative tool designed to manage website migrations, new site builds, and site decommissioning with unparalleled efficiency. This tool is a testament to my expertise in SEO, process automation, and software development. It was developed through a combination of my extensive experience in SEO and my passion for creating solutions that significantly reduce the margin for error while providing a seamless user experience.</p>
 
-<li><strong>Development of Standard Operating Procedures (SOPs):</strong> Initiated the creation of over 50 comprehensive SEO SOPs, which streamlined onboarding and operational processes, saving approximately 27.5 hours per employee in training time. This initiative standardized quality and improved efficiency across the board.</li>
-
-<li><strong>AI Integration and Process Automation:</strong> Implemented cutting-edge AI strategies and developed over 25 bespoke SEO templates, reducing process times by up to 45% and saving an average of 86.7 hours per project. This not only enhanced productivity but also increased the accuracy and quality of our work output.</li>
-
-
-<li><strong>Leadership and Team Development:</strong> Focused on the career advancement of my direct reports, with 65% achieving higher job titles within two years. I also established a certified in-house Digital ADA Compliance Specialists team, underscoring my commitment to professional development and accessibility in digital content.</li>
+<h3 style="font-weight: 900;">Key Skills Highlighted</h3>
+<ul>
+<li><strong>Custom Formula Development:</strong> Crafted unique formulas that interconnect various aspects of SEO management, ensuring dynamic updates and integrity across data sheets.</li>
+<li><strong>SEO Process Automation:</strong> Automated critical SEO processes, making the workbook an indispensable tool for efficient project management.</li>
+<li><strong>Error Reduction and User Experience:</strong> Designed the workbook to minimize human errors, ensuring accuracy and creating a user-friendly environment for SEO professionals.</li>
 </ul>
 
-<h3>Results</h3>
+<h3 style="font-weight: 900;">Challenge</h3>
+<p>The challenge I faced was transforming the cumbersome and error-prone process of managing SEO for website transitions into a streamlined, efficient, and accurate operation. Traditional methods were fraught with data loss, inconsistency, and significant human errors due to the lack of interconnected sheets and clear standard operating procedures (SOPs).</p>
 
+<h3 style="font-weight: 900;">Strategy</h3>
+<p>To revolutionize this process, I created an SEO Workbook filled with custom formulas, making the workbook entirely dynamic from one tab to the next. This strategic innovation involved:</p>
 <ul>
-<li><strong>Enhanced Organic Performance:</strong> Achieved a 43% net increase in organic traffic for clients by optimizing Core Web Vitals and implementing advanced AI-driven SEO strategies.</li>
-
-<li><strong>Revenue Growth:</strong> Directly contributed to over $200,000 in revenue from SEO projects, showcasing the direct impact of strategic SEO management on the bottom line.</li>
-
-<li><strong>Team Growth and Development:</strong> Successfully led team members to higher roles, demonstrating the effectiveness of a leadership approach focused on mentorship and professional growth.</li>
-
-<li><strong>Innovation in SEO:</strong> Pioneered the use of AI for SEO process automation and optimization, setting new standards for efficiency and performance in the industry.</li>
+<li>Developing custom formulas to ensure data integrity and seamless flow across different workbook sections.</li>
+<li>Establishing a detailed SOP to guide users through the process, ensuring consistency and quality.</li>
+<li>Creating a template scalable to any project size, thereby eliminating traditional bottlenecks and inefficiencies.</li>
 </ul>
 
-<h3>Conclusion</h3>
+<h3 style="font-weight: 900;">Results</h3>
+<p>The implementation of the SEO Workbook has led to:</p>
+<ul>
+<li>The total elimination of data loss and significant errors, enhancing project accuracy and reliability.</li>
+<li>A remarkable time saving, effectively halving the time required to manage SEO projects from inception to completion.</li>
+<li>The creation of a 100% scalable template that has become a cornerstone for SEO project management, setting a new industry standard.</li>
+</ul>
 
-<p>My management philosophy revolves around innovation, continuous improvement, and empowering teams to achieve their full potential. By embracing technology, fostering a culture of learning, and leading by example, I've been able to drive significant improvements in SEO performance, operational efficiency, and team development. This journey reflects my commitment to excellence in digital marketing and my dedication to leadership that inspires growth and success.</p>
+<h3 style="font-weight: 900;">Impact</h3>
+<p>The profound impact of this innovation includes a transformative shift in how SEO projects are managed, leading to a 84% improvement in efficiency and accuracy. This success has not only streamlined internal processes but has also significantly enhanced client satisfaction by ensuring flawless execution of SEO strategies and client ready deliverables integrated for easy review and approval.</p>
 
-<!--====== CALL TO ACTION ONE PART START ======-->
-<section class="call-action-area call-action-one">
-   <div class="container">
-      <div class="row align-items-center call-action-content">
-         <div class="col-xl-8 col-lg-8">
-            <div class="call-action-text">
-               <h2 class="action-title">
-                  Ready to create your startup <br />website?
-               </h2>
-               <p class="text-lg">
-                  AyroUI is here for you, download now and start building your web
-                  project.
-               </p>
-            </div>
-         </div>
-         <div class="col-xl-4 col-lg-4">
-            <div class="call-action-btn rounded-buttons text-lg-end">
-               <a href="javascript:void(0)" class="btn primary-btn rounded-full">
-               Get Started Now
-               </a>
-            </div>
-         </div>
-      </div>
-      <!-- row -->
-   </div>
-   <!-- container -->
-</section>
-<!--====== CALL TO ACTION ONE PART ENDS ======-->
-
-
-<h4>Engage with Us</h4>
-
-<p>I'm keen to connect with like-minded professionals and organizations passionate about digital marketing innovation and leadership excellence. Let's explore how we can drive forward the future of digital marketing together.</p>
-</div>
-         <!-- End Portfolio Details Section -->
-      </main>
-      <!-- End #main -->
-      <!-- ======= Footer ======= -->
+<h3 style="font-weight: 900;">Summary</h3>
+<p>In summary, my professional portfolio underscores my expertise in SEO and process automation, with a spotlight on the SEO Workbook I developed. This tool exemplifies my ability to tackle complex challenges, innovate solutions, and deliver measurable improvements. I am poised to bring this level of innovation and efficiency to new opportunities, continuing to drive advancements and achieve significant results in the digital marketing sphere.</p>
+<!-- ======= Footer ======= -->
       <footer id="footer">
          <div class="container">
             <div class="credits">
