--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -143,19 +143,17 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="https://dainedvorak.com/z_dev/public/assets/img/profile-img.png" alt=""
+        <img src="https://dainedvorak.com/z_dev/public/assets/img/profile-img.png" alt="Daine Dvorak Profile Picture"
           class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Daine Dvorak</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://bit.ly/DainesLinkedIn" class="facebook"><i class="bx bxl-facebook"></i>
           </a>
           <a href="https://bit.ly/DaineDLinkedIn2" class="linkedin"><i class="bx bxl-linkedin"></i>
-
           </a>
           <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
-
-            </o><a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
-            </a>
+          </a>
+          <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
           </a>
         </div>
       </div>
@@ -191,6 +189,7 @@
         <div class="d-flex justify-content-between align-items-center ">
           <h1>Daine Dvorak Work History Portfolio</h1>
         </div>
+        </div>
     </section>
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
@@ -225,7 +224,8 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
-            <div class="portfolio-wrap" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <div class="portfolio-wrap"
+              style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img
                 src="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover_url-extraction-bookmarklet-one-of-two.png"
                 class="img-fluid" alt="URL SERP Extraction">
@@ -242,7 +242,8 @@
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-innovate filter-seo">
-            <div class="portfolio-wrap shadow" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <div class="portfolio-wrap"
+              style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img
                 src="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/cover_advanced-schema-generator-using-customgpt-by-daine-dvorak-v2.png"
                 class="img-fluid border-radius-10" alt="">
@@ -257,7 +258,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-dev">
-            <div class="portfolio-wrap shadow " style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <div class="portfolio-wrap"
+              style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img src="https://dainedvorak.com/portfolio/coding/images/coding-excellence.png" class="img-fluid"
                 alt="Promotional graphic for Daine Dvorak, a skilled coding solutions developer, highlighting key skills in learning, innovation, and automation.">
               <div class="portfolio-links">
@@ -271,17 +273,19 @@
               </div>
             </div>
           </div>
-
+</div>
+<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 portfolio-item filter-dev">
-            <div class="portfolio-wrap  shadow " style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <div class="portfolio-wrap"
+              style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
               <img
-                src="https://dainedvorak.com/portfolio/seo-process-automation/google-app-scripts/gas---cover-image.png"
-                class="img-fluid" alt="" Promotional image for Daine Dvorak, highlighting expertise in Google App
+                src="https://dainedvorak.com/portfolio/google-app-scripts/gas---cover-image.png"
+                class="img-fluid" alt="Promotional image for Daine Dvorak, highlighting expertise in Google App
                 Scripts Development with key skills in JavaScript and automation.">
               <div class="portfolio-links">
-                <a href="https://dainedvorak.com/portfolio/seo-process-automation/google-app-scripts/gas---cover-image-2.png"
+                <a href="https://dainedvorak.com/portfolio/google-app-scripts/gas---cover-image-2.png"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="https://dainedvorak.com/portfolio/seo-process-automation/google-app-scripts/gas---cover-image-2.png_title">
+                  title="The range of use cases for Google App Scripts is vast. It allows the usage of basic JavaScript and integrates with nearly API services.">
                   <i class="bx bx-plus"></i>
                 </a>
                 <a href="https://dainedvorak.com/portfolio/seo-process-automation/index.html" title="More Details">
@@ -290,22 +294,27 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
-            <div class="portfolio-wrap  shadow " style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
-              <img src="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-1.png" class="img-fluid" alt="Graphic showcasing Daine Dvorak's SEO Process Automation with key skills in custom formulas, innovation, and algorithms.">
+            <div class="portfolio-wrap"
+              style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
+              <img src="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-1.png"
+                class="img-fluid"
+                alt="Graphic showcasing Daine Dvorak's SEO Process Automation with key skills in custom formulas, innovation, and algorithms.">
               <div class="portfolio-links">
-                <a href="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png_title">
-  <i class="bx bx-plus"></i>
-  </a>
+                <a href="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="https://dainedvorak.com/portfolio/seo-process-automation/process-automation---cover-2.png_title">
+                  <i class="bx bx-plus"></i>
+                </a>
                 <a href="https://dainedvorak.com/portfolio/seo-process-automation/index.html" title="More Details">
-  <i class="bx bx-link"></i></a>
+                  <i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-leadership">
-            <div class="portfolio-wrap shadow " style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
-              <img src="https://dainedvorak.com/portfolio/leadership-and-management/images/management---cover-2.png" class="img-fluid" alt="Daine Dvorak's digital marketing team in a collaborative meeting, emphasizing leadership and employee growth for SEO excellence.">
+            <div class="portfolio-wrap" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0); box-shadow: 2px 3px 2px 3px rgba(0, 0, 0, 0.562);">
+              <img src="https://dainedvorak.com/portfolio/leadership-and-management/images/management--cover.png" class="img-fluid" alt="Promotional image of a diverse team celebrating, with text highlighting Daine Dvorak's leadership and management skills in digital marketing.">
               <div class="portfolio-links">
-                <a href="https://dainedvorak.com/portfolio/leadership-and-management/images/management---cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="https://dainedvorak.com/portfolio/leadership-and-management/images/management---cover.png_title">
+                <a href="https://dainedvorak.com/portfolio/leadership-and-management/images/management--cover-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Man presenting management concepts to a group, likely representing Daine Dvorak's leadership and management expertise in a professional setting.">
   <i class="bx bx-plus"></i>
   </a>
                 <a href="https://dainedvorak.com/portfolio/leadership-and-management/index.html" title="More Details">
