--- a/portfolio/leadership-and-management/index.html
+++ b/portfolio/leadership-and-management/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <title>Daine Dvorak's Portfolio - 2024 - Home</title>
+      <title>Leadership & Management - Daine Dvorak's Portfolio</title>
       <meta content="" name="description">
       <meta content="" name="keywords">
       <!-- Favicons -->
